# tabpfn-mispecification

./: .exrsync  .gitignore  .rsyncignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml
configs/: debug.py  experiment.py  gaussian_linear.py  gaussian_linear_hd.py  gaussian_linear_hd_nonlinear.py  gaussian_mixture.py  gaussian_mixture_2d.py  gaussian_mixture_hd.py  lotka_volterra.py  lotka_volterra_hd.py  sir.py  slcp.py  two_moons.py
npe_pfn/: __init__.py  accept_reject_sampler.py  npe_pfn.py  restricted_prior.py  support_posterior.py  tsnpe_pfn.py
report/: report.tex
reports/gaussian_mixture_2d/: report.tex
scripts/: lvhd_diagnose.py  lvhd_setup_one_obs.py  plot_sweep.py  run_calibration_sweep.py  run_experiment.py  run_ythetaonly_all.py  smoke_test.py
scripts/cluster/: run_sweep_array.sh
slurm/: JEAN_ZAY_SETUP.md  lvhd_diagnose.slurm  lvhd_setup.slurm  lvhd_setup_array.slurm  sweep.slurm  sweep_largecal.slurm
tabpfn_misspec/: __init__.py  _gt_pipeline.py  baselines.py  calibrated.py  diagnostics.py  evaluate.py  fmcpe.py  lotka_volterra_hd.py  metrics.py  plotting.py  simulators.py  tasks.py
tests/: test_c2st_pytorch.py  test_custom_task.py  test_diagnostics.py
